EXTRA_DIST = \
		AUTHORS \
		VERSION \
		NEWS \
		COPYING

#datadir = $(PREFIX)/share/bomb-her-man

SUBDIRS = src

pkgdata_DATA = \
	data/graphics/players/1/0/2.svg \
	data/graphics/players/1/0/3.svg \
	data/graphics/players/1/0/1.svg \
	data/graphics/players/1/0/0.svg \
	data/graphics/players/1/3/2.svg \
	data/graphics/players/1/3/3.svg \
	data/graphics/players/1/3/1.svg \
	data/graphics/players/1/3/0.svg \
	data/graphics/players/1/1/2.svg \
	data/graphics/players/1/1/3.svg \
	data/graphics/players/1/1/1.svg \
	data/graphics/players/1/1/0.svg \
	data/graphics/players/1/2/2.svg \
	data/graphics/players/1/2/3.svg \
	data/graphics/players/1/2/1.svg \
	data/graphics/players/1/2/0.svg \
	data/graphics/players/2/0/2.svg \
	data/graphics/players/2/0/3.svg \
	data/graphics/players/2/0/1.svg \
	data/graphics/players/2/0/0.svg \
	data/graphics/players/2/3/2.svg \
	data/graphics/players/2/3/3.svg \
	data/graphics/players/2/3/1.svg \
	data/graphics/players/2/3/0.svg \
	data/graphics/players/2/1/2.svg \
	data/graphics/players/2/1/3.svg \
	data/graphics/players/2/1/1.svg \
	data/graphics/players/2/1/0.svg \
	data/graphics/players/2/2/2.svg \
	data/graphics/players/2/2/3.svg \
	data/graphics/players/2/2/1.svg \
	data/graphics/players/2/2/0.svg \
	data/graphics/bomb.svg \
	data/graphics/bonuses/2.svg \
	data/graphics/bonuses/3.svg \
	data/graphics/bonuses/5.svg \
	data/graphics/bonuses/6.svg \
	data/graphics/bonuses/4.svg \
	data/graphics/bonuses/1.svg \
	data/graphics/tomb2.svg \
	data/graphics/explo.svg \
	data/graphics/tomb1.svg \
	data/graphics/floor.svg \
	data/graphics/barrel.svg \
	data/graphics/scores/background-vertical.svg \
	data/graphics/scores/background-horizontal.svg \
	data/graphics/scores/1/lose.svg \
	data/graphics/scores/1/win.svg \
	data/graphics/scores/1/equal.svg \
	data/graphics/scores/2/lose.svg \
	data/graphics/scores/2/win.svg \
	data/graphics/scores/2/equal.svg \
	data/graphics/background.svg \
	data/graphics/bomb-her-man.svg

