graphicsdir = $(pkgdatadir)/graphics

nobase_graphics_DATA = \
	players/1/0/2.svg \
	players/1/0/3.svg \
	players/1/0/1.svg \
	players/1/0/0.svg \
	players/1/3/2.svg \
	players/1/3/3.svg \
	players/1/3/1.svg \
	players/1/3/0.svg \
	players/1/1/2.svg \
	players/1/1/3.svg \
	players/1/1/1.svg \
	players/1/1/0.svg \
	players/1/2/2.svg \
	players/1/2/3.svg \
	players/1/2/1.svg \
	players/1/2/0.svg \
	players/2/0/2.svg \
	players/2/0/3.svg \
	players/2/0/1.svg \
	players/2/0/0.svg \
	players/2/3/2.svg \
	players/2/3/3.svg \
	players/2/3/1.svg \
	players/2/3/0.svg \
	players/2/1/2.svg \
	players/2/1/3.svg \
	players/2/1/1.svg \
	players/2/1/0.svg \
	players/2/2/2.svg \
	players/2/2/3.svg \
	players/2/2/1.svg \
	players/2/2/0.svg \
	bonuses/2.svg \
	bonuses/3.svg \
	bonuses/5.svg \
	bonuses/6.svg \
	bonuses/4.svg \
	bonuses/1.svg \
	scores/background-vertical.svg \
	scores/background-horizontal.svg \
	scores/1/lose.svg \
	scores/1/win.svg \
	scores/1/equal.svg \
	scores/2/lose.svg \
	scores/2/win.svg \
	scores/2/equal.svg \
	background.svg \
	bomb.svg \
	tomb1.svg \
	tomb2.svg \
	explosion.svg \
	floor.svg \
	barrel.svg \
	bomb-her-man.svg
